invert faction color to fix contrast issue

--- a/styles/popout.css
+++ b/styles/popout.css
@@ -42,7 +42,7 @@
     width: 30%;
     top: 2%;
     right: 1%;
-    filter: drop-shadow(0px 0px 1px black);
+    filter: drop-shadow(0px 0px 1px black) brightness(0);
     opacity: 0.75;
     object-fit: cover;
 }
